Added movie model. Will be working on seeding model.

--- a/WebAPISample/WebAPISample.csproj
+++ b/WebAPISample/WebAPISample.csproj
@@ -222,6 +222,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201912041706055_Initial migration.cs" />
+    <Compile Include="Migrations\201912041706055_Initial migration.Designer.cs">
+      <DependentUpon>201912041706055_Initial migration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -338,7 +342,9 @@
     <TypeScriptCompile Include="Scripts\index.d.ts" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <EmbeddedResource Include="Migrations\201912041706055_Initial migration.resx">
+      <DependentUpon>201912041706055_Initial migration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
